cassandra.h

typedef enum { cass_false = 0, cass_true = 1 } cass_bool_t;
typedef float cass_float_t;
typedef double cass_double_t;
typedef __UINT8_TYPE__ cass_uint8_t;
typedef unsigned __INT8_TYPE__ cass_uint8_t;
typedef unsigned char cass_uint8_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef int cass_int32_t;
typedef __INT64_TYPE__ cass_int64_t;
typedef __UINT64_TYPE__ cass_uint64_t;
typedef __INT64_TYPE__ cass_int64_t;
typedef unsigned __INT64_TYPE__ cass_uint64_t;
typedef long long int cass_int64_t;
typedef unsigned long long int cass_uint64_t;
typedef long long cass_int64_t;
typedef unsigned long long cass_uint64_t;
typedef cass_uint8_t cass_byte_t;
typedef struct CassInet_ {
  cass_uint8_t address[CASS_INET_V6_LENGTH];
  cass_uint8_t address_length;
} CassInet;
typedef struct CassUuid_ {
  cass_uint64_t time_and_version;
  cass_uint64_t clock_seq_and_node;
} CassUuid;
typedef struct CassDataType_ CassDataType;
typedef struct CassCollection_ CassCollection;
typedef struct CassTuple_ CassTuple;
typedef struct CassUserType_ CassUserType;
typedef enum CassValueType_ {
  CASS_VALUE_TYPE_UNKNOWN   = 0xFFFF,
  CASS_VALUE_TYPE_CUSTOM    = 0x0000,
  CASS_VALUE_TYPE_ASCII     = 0x0001,
  CASS_VALUE_TYPE_BIGINT    = 0x0002,
  CASS_VALUE_TYPE_BLOB      = 0x0003,
  CASS_VALUE_TYPE_BOOLEAN   = 0x0004,
  CASS_VALUE_TYPE_COUNTER   = 0x0005,
  CASS_VALUE_TYPE_DECIMAL   = 0x0006,
  CASS_VALUE_TYPE_DOUBLE    = 0x0007,
  CASS_VALUE_TYPE_FLOAT     = 0x0008,
  CASS_VALUE_TYPE_INT       = 0x0009,
  CASS_VALUE_TYPE_TEXT      = 0x000A,
  CASS_VALUE_TYPE_TIMESTAMP = 0x000B,
  CASS_VALUE_TYPE_UUID      = 0x000C,
  CASS_VALUE_TYPE_VARCHAR   = 0x000D,
  CASS_VALUE_TYPE_VARINT    = 0x000E,
  CASS_VALUE_TYPE_TIMEUUID  = 0x000F,
  CASS_VALUE_TYPE_INET      = 0x0010,
  CASS_VALUE_TYPE_DATE      = 0x0011,
  CASS_VALUE_TYPE_TIME      = 0x0012,
  CASS_VALUE_TYPE_SMALL_INT = 0x0013,
  CASS_VALUE_TYPE_TINY_INT  = 0x0014,
  CASS_VALUE_TYPE_LIST      = 0x0020,
  CASS_VALUE_TYPE_MAP       = 0x0021,
  CASS_VALUE_TYPE_SET       = 0x0022,
  CASS_VALUE_TYPE_UDT       = 0x0030,
  CASS_VALUE_TYPE_TUPLE     = 0x0031,
  CASS_VALUE_TYPE_LAST_ENTRY
} CassValueType;
typedef enum CassCollectionType_ {
  CASS_COLLECTION_TYPE_LIST = CASS_VALUE_TYPE_LIST,
  CASS_COLLECTION_TYPE_MAP  = CASS_VALUE_TYPE_MAP,
  CASS_COLLECTION_TYPE_SET  = CASS_VALUE_TYPE_SET
} CassCollectionType;
typedef enum CassLogLevel_ {
#define XX_LOG(log_level, _) log_level,
  CASS_LOG_LEVEL_MAP(XX_LOG)
#undef XX_LOG
  CASS_LOG_LAST_ENTRY
} CassLogLevel;
typedef enum CassError_ {
  CASS_OK = 0,
#define XX_ERROR(source, name, code, _) name = CASS_ERROR(source, code),
  CASS_ERROR_MAP(XX_ERROR)
#undef XX_ERROR
  CASS_ERROR_LAST_ENTRY
} CassError;
CASS_EXPORT CassError
cass_data_type_add_sub_type_by_name(CassDataType* data_type,
                                    const char* name,
                                    const CassDataType* sub_data_type);
CASS_EXPORT CassError
cass_data_type_add_sub_type_by_name_n(CassDataType* data_type,
                                      const char* name,
                                      size_t name_length,
                                      const CassDataType* sub_data_type);
CASS_EXPORT CassError
cass_data_type_add_sub_value_type(CassDataType* data_type,
                                  CassValueType sub_value_type);
CASS_EXPORT CassError
cass_data_type_add_sub_value_type_by_name(CassDataType* data_type,
                                          const char* name,
                                          CassValueType sub_value_type);
CASS_EXPORT CassError
cass_data_type_add_sub_value_type_by_name_n(CassDataType* data_type,
                                            const char* name,
                                            size_t name_length,
                                            CassValueType sub_value_type);
CASS_EXPORT CassCollection*
cass_collection_new(CassCollectionType type,
                    size_t item_count);
CASS_EXPORT CassCollection*
cass_collection_new_from_data_type(const CassDataType* data_type,
                                   size_t item_count);
CASS_EXPORT void
cass_collection_free(CassCollection* collection);
CASS_EXPORT const CassDataType*
cass_collection_data_type(const CassCollection* collection);
CASS_EXPORT CassError
cass_collection_append_int32(CassCollection* collection,
                             cass_int32_t value);
CASS_EXPORT CassError
cass_collection_append_int64(CassCollection* collection,
                             cass_int64_t value);
CASS_EXPORT CassError
cass_collection_append_float(CassCollection* collection,
                             cass_float_t value);
CASS_EXPORT CassError
cass_collection_append_double(CassCollection* collection,
                              cass_double_t value);
CASS_EXPORT CassError
cass_collection_append_bool(CassCollection* collection,
                            cass_bool_t value);
CASS_EXPORT CassError
cass_collection_append_string(CassCollection* collection,
                              const char* value);
CASS_EXPORT CassError
cass_collection_append_string_n(CassCollection* collection,
                                const char* value,
                                size_t value_length);
CASS_EXPORT CassError
cass_collection_append_bytes(CassCollection* collection,
                             const cass_byte_t* value,
                             size_t value_size);
CASS_EXPORT CassError
cass_collection_append_uuid(CassCollection* collection,
                            CassUuid value);
CASS_EXPORT CassError
cass_collection_append_inet(CassCollection* collection,
                            CassInet value);
CASS_EXPORT CassError
cass_collection_append_decimal(CassCollection* collection,
                               const cass_byte_t* varint,
                               size_t varint_size,
                               cass_int32_t scale);
CASS_EXPORT CassError
cass_collection_append_collection(CassCollection* collection,
                                  const CassCollection* value);
CASS_EXPORT CassError
cass_collection_append_tuple(CassCollection* collection,
                             const CassTuple* value);
CASS_EXPORT CassError
cass_collection_append_user_type(CassCollection* collection,
                                 const CassUserType* value);
CASS_EXPORT CassTuple*
cass_tuple_new(size_t item_count);
CASS_EXPORT CassTuple*
cass_tuple_new_from_data_type(const CassDataType* data_type);
CASS_EXPORT void
cass_tuple_free(CassTuple* tuple);
CASS_EXPORT const CassDataType*
cass_tuple_data_type(const CassTuple* tuple);
CASS_EXPORT CassError
cass_tuple_set_null(CassTuple* tuple, size_t index);
CASS_EXPORT CassError
cass_tuple_set_int32(CassTuple* tuple,
                     size_t index,
                     cass_int32_t value);
CASS_EXPORT CassError
cass_tuple_set_int64(CassTuple* tuple,
                     size_t index,
                     cass_int64_t value);
CASS_EXPORT CassError
cass_tuple_set_float(CassTuple* tuple,
                     size_t index,
                     cass_float_t value);
CASS_EXPORT CassError
cass_tuple_set_double(CassTuple* tuple,
                      size_t index,
                      cass_double_t value);
CASS_EXPORT CassError
cass_tuple_set_bool(CassTuple* tuple,
                    size_t index,
                    cass_bool_t value);
CASS_EXPORT CassError
cass_tuple_set_string(CassTuple* tuple,
                      size_t index,
                      const char* value);
CASS_EXPORT CassError
cass_tuple_set_string_n(CassTuple* tuple,
                        size_t index,
                        const char* value,
                        size_t value_length);
CASS_EXPORT CassError
cass_tuple_set_bytes(CassTuple* tuple,
                     size_t index,
                     const cass_byte_t* value,
                     size_t value_size);
CASS_EXPORT CassError
cass_tuple_set_uuid(CassTuple* tuple,
                    size_t index,
                    CassUuid value);
CASS_EXPORT CassError
cass_tuple_set_inet(CassTuple* tuple,
                    size_t index,
                    CassInet value);
CASS_EXPORT CassError
cass_tuple_set_decimal(CassTuple* tuple,
                       size_t index,
                       const cass_byte_t* varint,
                       size_t varint_size,
                       cass_int32_t scale);
CASS_EXPORT CassError
cass_tuple_set_collection(CassTuple* tuple,
                          size_t index,
                          const CassCollection* value);
CASS_EXPORT CassError
cass_tuple_set_tuple(CassTuple* tuple,
                     size_t index,
                     const CassTuple* value);
CASS_EXPORT CassError
cass_tuple_set_user_type(CassTuple* tuple,
                         size_t index,
                         const CassUserType* value);
CASS_EXPORT CassUserType*
cass_user_type_new_from_data_type(const CassDataType* data_type);
CASS_EXPORT void
cass_user_type_free(CassUserType* user_type);
CASS_EXPORT const CassDataType*
cass_user_type_data_type(const CassUserType* user_type);
CASS_EXPORT CassError
cass_user_type_set_null(CassUserType* user_type,
                        size_t index);
CASS_EXPORT CassError
cass_user_type_set_null_by_name(CassUserType* user_type,
                                const char* name);
CASS_EXPORT CassError
cass_user_type_set_null_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length);
CASS_EXPORT CassError
cass_user_type_set_int32(CassUserType* user_type,
                         size_t index,
                         cass_int32_t value);
CASS_EXPORT CassError
cass_user_type_set_int32_by_name(CassUserType* user_type,
                                 const char* name,
                                 cass_int32_t value);
CASS_EXPORT CassError
cass_user_type_set_int32_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   cass_int32_t value);
CASS_EXPORT CassError
cass_user_type_set_int64(CassUserType* user_type,
                         size_t index,
                         cass_int64_t value);
CASS_EXPORT CassError
cass_user_type_set_int64_by_name(CassUserType* user_type,
                                 const char* name,
                                 cass_int64_t value);
CASS_EXPORT CassError
cass_user_type_set_int64_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   cass_int64_t value);
CASS_EXPORT CassError
cass_user_type_set_float(CassUserType* user_type,
                         size_t index,
                         cass_float_t value);
CASS_EXPORT CassError
cass_user_type_set_float_by_name(CassUserType* user_type,
                                 const char* name,
                                 cass_float_t value);
CASS_EXPORT CassError
cass_user_type_set_float_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   cass_float_t value);
CASS_EXPORT CassError
cass_user_type_set_double(CassUserType* user_type,
                         size_t index,
                         cass_double_t value);
CASS_EXPORT CassError
cass_user_type_set_double_by_name(CassUserType* user_type,
                                 const char* name,
                                 cass_double_t value);
CASS_EXPORT CassError
cass_user_type_set_double_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   cass_double_t value);
CASS_EXPORT CassError
cass_user_type_set_bool(CassUserType* user_type,
                         size_t index,
                         cass_bool_t value);
CASS_EXPORT CassError
cass_user_type_set_bool_by_name(CassUserType* user_type,
                                 const char* name,
                                 cass_bool_t value);
CASS_EXPORT CassError
cass_user_type_set_bool_by_name_n(CassUserType* user_type,
                                   const char* name,
                                   size_t name_length,
                                   cass_bool_t value);
CASS_EXPORT CassError
cass_user_type_set_string(CassUserType* user_type,
                          size_t index,
                          const char* value);
CASS_EXPORT CassError
cass_user_type_set_string_n(CassUserType* user_type,
                            size_t index,
                            const char* value,
                            size_t value_length);