src/cassandra.rs

    pub fn cass_data_type_add_sub_type_by_name(data_type: *mut CassDataType,
                                               name: *const ::libc::c_char,
                                               sub_data_type:
                                                   *const CassDataType)
     -> CassError;
    pub fn cass_data_type_add_sub_type_by_name_n(data_type: *mut CassDataType,
                                                 name: *const ::libc::c_char,
                                                 name_length: size_t,
                                                 sub_data_type:
                                                     *const CassDataType)
     -> CassError;
    pub fn cass_data_type_add_sub_value_type(data_type: *mut CassDataType,
                                             sub_value_type: CassValueType)
     -> CassError;
    pub fn cass_data_type_add_sub_value_type_by_name(data_type:
                                                         *mut CassDataType,
                                                     name:
                                                         *const ::libc::c_char,
                                                     sub_value_type:
                                                         CassValueType)
     -> CassError;
    pub fn cass_data_type_add_sub_value_type_by_name_n(data_type:
                                                           *mut CassDataType,
                                                       name:
                                                           *const ::libc::c_char,
                                                       name_length: size_t,
                                                       sub_value_type:
                                                           CassValueType)
     -> CassError;
    pub fn cass_collection_new(_type: CassCollectionType, item_count: size_t)
     -> *mut CassCollection;
    pub fn cass_collection_new_from_data_type(data_type: *const CassDataType,
                                              item_count: size_t)
     -> *mut CassCollection;
    pub fn cass_collection_free(collection: *mut CassCollection) -> ();
    pub fn cass_collection_data_type(collection: *const CassCollection)
     -> *const CassDataType;
    pub fn cass_collection_append_int32(collection: *mut CassCollection,
                                        value: cass_int32_t) -> CassError;
    pub fn cass_collection_append_int64(collection: *mut CassCollection,
                                        value: cass_int64_t) -> CassError;
    pub fn cass_collection_append_float(collection: *mut CassCollection,
                                        value: cass_float_t) -> CassError;
    pub fn cass_collection_append_double(collection: *mut CassCollection,
                                         value: cass_double_t) -> CassError;
    pub fn cass_collection_append_bool(collection: *mut CassCollection,
                                       value: cass_bool_t) -> CassError;
    pub fn cass_collection_append_string(collection: *mut CassCollection,
                                         value: *const ::libc::c_char)
     -> CassError;
    pub fn cass_collection_append_string_n(collection: *mut CassCollection,
                                           value: *const ::libc::c_char,
                                           value_length: size_t) -> CassError;
    pub fn cass_collection_append_bytes(collection: *mut CassCollection,
                                        value: *const cass_byte_t,
                                        value_size: size_t) -> CassError;
    pub fn cass_collection_append_uuid(collection: *mut CassCollection,
                                       value: CassUuid) -> CassError;
    pub fn cass_collection_append_inet(collection: *mut CassCollection,
                                       value: CassInet) -> CassError;
    pub fn cass_collection_append_decimal(collection: *mut CassCollection,
                                          varint: *const cass_byte_t,
                                          varint_size: size_t,
                                          scale: cass_int32_t) -> CassError;
    pub fn cass_collection_append_collection(collection: *mut CassCollection,
                                             value: *const CassCollection)
     -> CassError;
    pub fn cass_collection_append_tuple(collection: *mut CassCollection,
                                        value: *const CassTuple) -> CassError;
    pub fn cass_collection_append_user_type(collection: *mut CassCollection,
                                            value: *const CassUserType)
     -> CassError;
    pub fn cass_tuple_new(item_count: size_t) -> *mut CassTuple;
    pub fn cass_tuple_new_from_data_type(data_type: *const CassDataType)
     -> *mut CassTuple;
    pub fn cass_tuple_free(tuple: *mut CassTuple) -> ();
    pub fn cass_tuple_data_type(tuple: *const CassTuple)
     -> *const CassDataType;
    pub fn cass_tuple_set_null(tuple: *mut CassTuple, index: size_t)
     -> CassError;
    pub fn cass_tuple_set_int32(tuple: *mut CassTuple, index: size_t,
                                value: cass_int32_t) -> CassError;
    pub fn cass_tuple_set_int64(tuple: *mut CassTuple, index: size_t,
                                value: cass_int64_t) -> CassError;
    pub fn cass_tuple_set_float(tuple: *mut CassTuple, index: size_t,
                                value: cass_float_t) -> CassError;
    pub fn cass_tuple_set_double(tuple: *mut CassTuple, index: size_t,
                                 value: cass_double_t) -> CassError;
    pub fn cass_tuple_set_bool(tuple: *mut CassTuple, index: size_t,
                               value: cass_bool_t) -> CassError;
    pub fn cass_tuple_set_string(tuple: *mut CassTuple, index: size_t,
                                 value: *const ::libc::c_char) -> CassError;
    pub fn cass_tuple_set_string_n(tuple: *mut CassTuple, index: size_t,
                                   value: *const ::libc::c_char,
                                   value_length: size_t) -> CassError;
    pub fn cass_tuple_set_bytes(tuple: *mut CassTuple, index: size_t,
                                value: *const cass_byte_t, value_size: size_t)
     -> CassError;
    pub fn cass_tuple_set_uuid(tuple: *mut CassTuple, index: size_t,
                               value: CassUuid) -> CassError;
    pub fn cass_tuple_set_inet(tuple: *mut CassTuple, index: size_t,
                               value: CassInet) -> CassError;
    pub fn cass_tuple_set_decimal(tuple: *mut CassTuple, index: size_t,
                                  varint: *const cass_byte_t,
                                  varint_size: size_t, scale: cass_int32_t)
     -> CassError;
    pub fn cass_tuple_set_collection(tuple: *mut CassTuple, index: size_t,
                                     value: *const CassCollection)
     -> CassError;
    pub fn cass_tuple_set_tuple(tuple: *mut CassTuple, index: size_t,
                                value: *const CassTuple) -> CassError;
    pub fn cass_tuple_set_user_type(tuple: *mut CassTuple, index: size_t,
                                    value: *const CassUserType) -> CassError;
    pub fn cass_user_type_new_from_data_type(data_type: *const CassDataType)
     -> *mut CassUserType;
    pub fn cass_user_type_free(user_type: *mut CassUserType) -> ();
    pub fn cass_user_type_data_type(user_type: *const CassUserType)
     -> *const CassDataType;
    pub fn cass_user_type_set_null(user_type: *mut CassUserType,
                                   index: size_t) -> CassError;
    pub fn cass_user_type_set_null_by_name(user_type: *mut CassUserType,
                                           name: *const ::libc::c_char)
     -> CassError;
    pub fn cass_user_type_set_null_by_name_n(user_type: *mut CassUserType,
                                             name: *const ::libc::c_char,
                                             name_length: size_t)
     -> CassError;
    pub fn cass_user_type_set_int32(user_type: *mut CassUserType,
                                    index: size_t, value: cass_int32_t)
     -> CassError;
    pub fn cass_user_type_set_int32_by_name(user_type: *mut CassUserType,
                                            name: *const ::libc::c_char,
                                            value: cass_int32_t) -> CassError;
    pub fn cass_user_type_set_int32_by_name_n(user_type: *mut CassUserType,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: cass_int32_t)
     -> CassError;
    pub fn cass_user_type_set_int64(user_type: *mut CassUserType,
                                    index: size_t, value: cass_int64_t)
     -> CassError;
    pub fn cass_user_type_set_int64_by_name(user_type: *mut CassUserType,
                                            name: *const ::libc::c_char,
                                            value: cass_int64_t) -> CassError;
    pub fn cass_user_type_set_int64_by_name_n(user_type: *mut CassUserType,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: cass_int64_t)
     -> CassError;
    pub fn cass_user_type_set_float(user_type: *mut CassUserType,
                                    index: size_t, value: cass_float_t)
     -> CassError;
    pub fn cass_user_type_set_float_by_name(user_type: *mut CassUserType,
                                            name: *const ::libc::c_char,
                                            value: cass_float_t) -> CassError;
    pub fn cass_user_type_set_float_by_name_n(user_type: *mut CassUserType,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: cass_float_t)
     -> CassError;
    pub fn cass_user_type_set_double(user_type: *mut CassUserType,
                                     index: size_t, value: cass_double_t)
     -> CassError;
    pub fn cass_user_type_set_double_by_name(user_type: *mut CassUserType,
                                             name: *const ::libc::c_char,
                                             value: cass_double_t)
     -> CassError;
    pub fn cass_user_type_set_double_by_name_n(user_type: *mut CassUserType,
                                               name: *const ::libc::c_char,
                                               name_length: size_t,
                                               value: cass_double_t)
     -> CassError;
    pub fn cass_user_type_set_bool(user_type: *mut CassUserType,
                                   index: size_t, value: cass_bool_t)
     -> CassError;
    pub fn cass_user_type_set_bool_by_name(user_type: *mut CassUserType,
                                           name: *const ::libc::c_char,
                                           value: cass_bool_t) -> CassError;
    pub fn cass_user_type_set_bool_by_name_n(user_type: *mut CassUserType,
                                             name: *const ::libc::c_char,
                                             name_length: size_t,
                                             value: cass_bool_t) -> CassError;
    pub fn cass_user_type_set_string(user_type: *mut CassUserType,
                                     index: size_t,
                                     value: *const ::libc::c_char)
     -> CassError;
    pub fn cass_user_type_set_string_n(user_type: *mut CassUserType,
                                       index: size_t,
                                       value: *const ::libc::c_char,
                                       value_length: size_t) -> CassError;
